# cabal

./: Makefile  PLAN.md  builder.nix  cabal.bootstrap.project  cabal.project  flake.nix  groups  justfile  project.config  rules  sgconfig.yml
.github/workflows/: release.yaml  reusable-release.yml  validate-old-ghcs.yml  validate.yml
Cabal/: Cabal.cabal
Cabal-described/src/Distribution/: Described.hs
Cabal-fields/: Cabal-fields.cabal  GRAMMAR.md
Cabal-fields/src/Distribution/Fields/: Field.hs  Internal.hs  Lexer.x  LexerMonad.hs  Parser.hs  Position.hs  Pretty.hs  Source.hs  Warning.hs
Cabal-syntax/: Cabal-syntax.cabal  ReadFields.hs
Cabal-syntax/src/Distribution/: Compiler.hs  Fields.hs  InstalledPackageInfo.hs  Parsec.hs  System.hs
Cabal-tests/: Cabal-tests.cabal
Cabal-tests/tests/: HackageTests.hs  NoThunks.hs  ParserTests.hs
Cabal-tests/tests/UnitTests/: Orphans.hs
Cabal-tests/tests/custom-setup/: IdrisSetup.hs
Cabal/src/Distribution/: AllowNewer.hs  Make.hs  Simple.hs
bootstrap/: bootstrap.py
cabal-install/: cabal-install.cabal
cabal-install-solver/: cabal-install-solver.cabal
cabal-install/main/: Main.hs
cabal-install/parser-tests/Tests/: ParserTests.hs
cabal-install/tests/: IntegrationTests2.hs  UnitTests.hs
cabal-testsuite/: cabal-testsuite.cabal
cabal-testsuite/PackageTests/Ambiguity/: setup-reexport.test.hs
cabal-testsuite/PackageTests/CCompilerOverride/: setup.test.hs
cabal-testsuite/PackageTests/CaretOperator/: setup.test.hs
cabal-testsuite/PackageTests/CmmSources/: setup.test.hs
cabal-testsuite/PackageTests/CmmSourcesDyn/: setup.test.hs
cabal-testsuite/PackageTests/CustomDep/: cabal.test.hs
cabal-testsuite/PackageTests/CustomPlain/: cabal.test.hs
cabal-testsuite/PackageTests/CustomSegfault/: cabal.test.hs
cabal-testsuite/main/: cabal-tests.hs
doc/: cabal-package-description-file.rst  cabal-package.rst  cabal-project-description-file.rst  cabal-project.rst  nix-local-build-overview.rst  setup-commands.rst
project-cabal/pkgs/: cabal.config
templates/: Paths_pkg.template.hs
(+350 files in other folders)
